# numeric-calc

./: pyproject.toml
scr/ex1/: Exercícios1.ipynb
